[tool.poetry]
name = "ttable"
version = "0.6.4"
description = "A library and command-line tool for working with Boolean expressions"
license = "MIT"
authors = ["Brian Welch <welch18@vt.edu>"]
readme = "README.rst"
repository = "https://github.com/welchbj/tt/"
documentation = "https://tt.brianwel.ch"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
]
packages = [
    { include = "tt" },
]
build = "build.py"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/welchbj/tt/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
